fix postfeed overflow + postfeed dynamic sizing

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
   align-items: center;
   flex-direction: column;
 }
-
+.error-mobile-waiting-page{
+  display: none;
+}
 @media (max-width: 800px) {
   .error-mobile-waiting-page {
     height: 100vh !important;
@@ -29,7 +31,6 @@
   .logo-sofan-waiting-page-container {
     height: 20%;
     width: 100%;
-    /* background-color: green; */
     display: flex;
     justify-content: center;
     align-items: center;
