--- a/src/Components/FeedSuggestions/FeedSuggestions.css
+++ b/src/Components/FeedSuggestions/FeedSuggestions.css
@@ -29,7 +29,7 @@
   .feedsuggestions-component{
     width: 200px;
   }
-  .feedlaunchpad-header-button{
+  /* .feedlaunchpad-header-button{
     display: none;
-  }
+  } */
 }
