--- a/src/Components/PostsComponents/PostsFeed/PostsFeed.css
+++ b/src/Components/PostsComponents/PostsFeed/PostsFeed.css
@@ -2,13 +2,13 @@
   max-height: 863px;
   max-width: 517px;
   margin-bottom: 60px;
-  margin-top: 30px;
+  
 }
 .publication-content {
   max-height: 863px;
   max-width: 517px;
   /* height: 90%; */
-  height: 863px;
+  /* height: 863px; */
   width: 90%;
   padding: 20px;
   display: flex;
@@ -17,8 +17,11 @@
   box-shadow: 0px 0px 20.3424px rgba(0, 0, 0, 0.08);
   border-radius: 9.94299px;
   position: relative;
+  overflow-y: scroll;
 }
-
+.publication-content::-webkit-scrollbar{
+  display: none;
+}
 .publication-head-container {
   width: 100%;
   height: 40px;
@@ -63,5 +66,10 @@
 @media (max-width: 1350px) {
   .line-separation-comments-publication-container {
     height: 25px;
+  }
+}
+@media (max-height: 820px) {
+  .publication-container{
+    /* margin-top: calc(100vh - 50em); */
   }
 }
